app/assets/stylesheets/footer.scss
.footer {
  margin-top: 1.5rem;
  padding-top: 1.5rem;
  padding-bottom: 3rem;
  border-top: 1px solid rgba(0, 0, 0, 0.15);
  &-links {
    display: flex;
    justify-content: center;
    font-size: 0.9em;
    @media (min-width: 340px) {
      font-size: 1em;
    }
    a {
      padding: 0 0.7rem;
      font-weight: 800;
    }
  }
  &-copyright {
    font-size: 0.9em;
    margin-top: 0.5rem;
    opacity: 0.3;
    text-align: center;
    @media (min-width: 340px) {
      font-size: 0.935em;
    }
  }
}

